...
        
        titleLbl.font = UIFont.systemFont(ofSize: 22, weight: .bold)
        titleLbl.text = ""
        distanceLbl.text = ""
        cuisineLbl.text = ""
        
        favoritesBtn.setTitle("Add to Favorites", for: .normal)
        favoritesBtn.setTitleColor(.systemBlue, for: .normal)
        
        errorLbl.text = "No more restaurants"
        errorLbl.textAlignment = .center
        errorLbl.numberOfLines = 0
        errorLbl.font = UIFont.systemFont(ofSize: 16, weight: .medium)
...
            
            if let user = signedInUser, let favRestaurants = user.favRestaurants {
                for favoriteRest in favRestaurants {
                    if let favRestaurant = favoriteRest as? SavedRestaurant,
                       let favId = favRestaurant.id,
                       restaurant.id == favId {
                        self.favoritesBtn.setTitle("In Favorites", for: .normal)
                        self.isRestaurantInFavorites = true
                        return
                    }
                }
            }
            
...
    
    @IBAction func favoritesBtnTap(_ sender: Any) {
        if self.isRestaurantInFavorites {
            if let restaurant = searchResult?.getCurrentRestaurant() {
                restaurant.removeFromFavorites(context: context)
            }
            self.favoritesBtn.setTitle("Add to favorites", for: .normal)
        } else if signedInUser?.favRestaurants?.count ?? 0 >= 5 {
            self.createAlert(title: "Favorite limit reached", message: "You can only have 5 favorites. Remove a favorite restaurant from your profile to add this one.")
            return
        } else {
            if let restaurant = searchResult?.getCurrentRestaurant() {
                restaurant.saveToCoreData(context: context, saveToFavorites: true)
...


extension UIViewController {
    func createAlert(title: String, message: String) {
        let alert = UIAlertController(title: title, message: message, preferredStyle: .alert)
        
        let okay = UIAlertAction(title: "OK", style: .cancel, handler: nil)
        alert.addAction(okay)
        
        self.present(alert, animated: true, completion: nil)
    }
}

