...
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="LAA-2b-YEn">
                            <rect key="frame" x="132.5" y="338.5" width="109" height="42"/>
                            <color key="backgroundColor" red="1" green="0.72409796709999996" blue="0.7255019546" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <directionalEdgeInsets key="directionalLayoutMargins" top="8" leading="8" bottom="8" trailing="8"/>
                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
                            <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
                            <state key="normal" title="View Menu">
                                <color key="titleColor" red="0.99989169840000003" green="1" blue="0.99988096950000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" weight="regular"/>
                            </state>
                            <connections>
                                <action selector="menuButtonTap:" destination="-1" eventType="touchUpInside" id="jB0-mR-KXj"/>
                            </connections>
...
                </label>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BmF-lL-nPF">
                    <rect key="frame" x="134.5" y="796" width="145" height="42"/>
                    <color key="backgroundColor" red="0.99607843137254903" green="0.57647058823529407" blue="0.58823529411764708" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
                    <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
                    <state key="normal" title="My Restaurants">
                        <color key="titleColor" red="0.99989169840000003" green="1" blue="0.99988096950000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" weight="regular"/>
                    </state>
                    <connections>
                        <action selector="savedBtnTap:" destination="-1" eventType="touchUpInside" id="q9c-Aa-0qG"/>
                    </connections>
...
                        <action selector="searchBtnTap:" destination="-1" eventType="touchUpInside" id="xZK-Mz-zS1"/>
                    </connections>
                </button>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pJU-b7-O7S">
                    <rect key="frame" x="20" y="50.5" width="25" height="24"/>
                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <state key="normal" image="person.circle" catalog="system">
                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="21" scale="medium" weight="medium"/>
                    </state>
                    <connections>
                        <action selector="profileBtnTap:" destination="-1" eventType="touchUpInside" id="Auy-cC-gYy"/>
                    </connections>
                </button>
...
